// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots a/IconList Base 1`] = `
<ul
  className="base icon-list"
  style={
    Object {
      "--list-icon": undefined,
      "--list-icon-hover": undefined,
    }
  }
>
  <li
    className="elementItem"
    style={
      Object {
        "--list-icon": "\\"o\\"",
        "--list-icon-hover": undefined,
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </li>
  <li
    className="elementItem x-red xh-orange c-x"
    style={
      Object {
        "--list-icon": "\\"f\\"",
        "--list-icon-hover": undefined,
      }
    }
  >
    (Colors) Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </li>
  <li
    className="elementItem"
    style={
      Object {
        "--list-icon": undefined,
        "--list-icon-hover": undefined,
      }
    }
  >
    (No icon) Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </li>
  <li
    className="elementItem"
    style={
      Object {
        "--list-icon": "\\"d\\"",
        "--list-icon-hover": "\\"o\\"",
      }
    }
  >
    (Icon Hover) Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </li>
</ul>
`;

exports[`Storyshots a/ProgressBar Attached 1`] = `
<div
  style={
    Object {
      "border": "2px solid var(--grid)",
    }
  }
>
  <div
    className="base progress-bar modifierAttached"
    data-length="50%"
    style={
      Object {
        "--height": undefined,
        "--progress": 40,
      }
    }
  />
  <div
    style={
      Object {
        "padding": "1em",
      }
    }
  >
    <h3>
      Use the buttons to modify the value
    </h3>
    <button
      onClick={[Function]}
      type="button"
    >
      Less
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      More
    </button>
  </div>
</div>
`;

exports[`Storyshots a/ProgressBar Base 1`] = `
<div
  className="base progress-bar"
  data-length="50%"
  style={
    Object {
      "--height": undefined,
      "--progress": 70,
    }
  }
/>
`;

exports[`Storyshots a/ProgressBar Color 1`] = `
<div
  className="base progress-bar x-orange"
  data-length="50%"
  style={
    Object {
      "--height": undefined,
      "--progress": 70,
    }
  }
/>
`;

exports[`Storyshots a/ProgressBar Height 1`] = `
<div
  className="base progress-bar"
  data-length="50%"
  style={
    Object {
      "--height": "5em",
      "--progress": 62,
    }
  }
/>
`;

exports[`Storyshots a/SVG Animated 1`] = `
Array [
  <svg
    className="base svg y-red modifierAnimated"
    height="200"
    preserveAspectRatio="xMinYMin meet"
    version="1.1"
    viewBox="0 0 512 512"
    width="200"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      className=""
      href="/sprite.svg#engine"
      style={
        Object {
          "style": undefined,
        }
      }
    />
  </svg>,
  <svg
    className="base svg y-indigo modifierAnimated"
    height="200"
    preserveAspectRatio="xMinYMin meet"
    style={
      Object {
        "--svg-animation-repeats": "3",
        "--svg-animation-time": "10s",
        "--svg-origin-stroke-dashoffset": 100,
        "--svg-stroke-width": 9,
        "--svg-target-stroke-dashoffset": 10000,
      }
    }
    version="1.1"
    viewBox="0 0 512 512"
    width="200"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      className=""
      href="/sprite.svg#engine"
      style={
        Object {
          "style": undefined,
        }
      }
    />
  </svg>,
  <svg
    className="base svg y-red modifierAnimated"
    height="200"
    preserveAspectRatio="xMinYMin meet"
    style={
      Object {
        "--svg-animation-repeats": "infinite",
        "--svg-animation-time": "20s",
        "--svg-origin-stroke-dashoffset": 5000,
        "--svg-target-stroke-dashoffset": 0,
      }
    }
    version="1.1"
    viewBox="0 0 512 512"
    width="200"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      className=""
      href="/sprite.svg#engine"
      style={
        Object {
          "style": undefined,
        }
      }
    />
  </svg>,
]
`;

exports[`Storyshots a/SVG Base 1`] = `
<svg
  className="base svg x-black"
  height="200"
  preserveAspectRatio="xMinYMin meet"
  version="1.1"
  viewBox="0 0 512 512"
  width="200"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    className=""
    href="/sprite.svg#engine"
    style={
      Object {
        "style": undefined,
      }
    }
  />
</svg>
`;

exports[`Storyshots a/SVG Logo 1`] = `
Array [
  <p>
    The logo needs to have a stroke with 
    <code>
      y
    </code>
  </p>,
  <svg
    className="base svg"
    height="200"
    preserveAspectRatio="xMinYMin meet"
    style={
      Object {
        "--color-1": "var(--red)",
        "--color-2": "var(--violet)",
        "--color-3": "var(--pink)",
        "--color-4": "var(--green)",
      }
    }
    version="1.1"
    viewBox="0 0 512 512"
    width="200"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      className=""
      href="/logo.svg#logo"
      style={
        Object {
          "style": undefined,
        }
      }
    />
  </svg>,
  <svg
    className="base svg y-red"
    height="200"
    preserveAspectRatio="xMinYMin meet"
    version="1.1"
    viewBox="0 0 512 512"
    width="200"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      className=""
      href="/logo.svg#logo"
      style={
        Object {
          "style": undefined,
        }
      }
    />
  </svg>,
  <svg
    className="base svg y-black"
    height="200"
    preserveAspectRatio="xMinYMin meet"
    style={
      Object {
        "--color-1": "var(--blue)",
        "--color-2": "var(--indigo)",
        "--color-3": "var(--clear)",
        "--color-4": "var(--orange)",
      }
    }
    version="1.1"
    viewBox="0 0 512 512"
    width="200"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      className=""
      href="/logo.svg#logo"
      style={
        Object {
          "style": undefined,
        }
      }
    />
  </svg>,
]
`;

exports[`Storyshots a/SVG Stroke 1`] = `
<svg
  className="base svg y-green"
  height="200"
  preserveAspectRatio="xMinYMin meet"
  version="1.1"
  viewBox="0 0 512 512"
  width="200"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    className=""
    href="/sprite.svg#engine"
    style={
      Object {
        "style": undefined,
      }
    }
  />
</svg>
`;

exports[`Storyshots a/SiteContext Base 1`] = `"Sample SiteContext"`;

exports[`Storyshots b/Button Base 1`] = `
Array [
  <span
    className="s0"
  >
    <button
      className="base button x-exp3"
      disabled={false}
      type="button"
    >
      Descubre mas
    </button>
  </span>,
  <span
    className="s3"
  >
    <button
      className="base button x-exp3"
      disabled={false}
      type="button"
    >
      Descubre mas
    </button>
  </span>,
]
`;

exports[`Storyshots b/Button Colors 1`] = `
Array [
  <span
    className="s0"
  >
    <button
      className="base button x-success"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-warning"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-error"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-red"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-pink"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-orange"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-yellow"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-green"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-indigo"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-indigo2"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-blue"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-violet"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-clear"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-background"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-heading"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-paragraph"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-subtitle"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-metadata"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-link"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-navlink"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-twitter"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-facebook"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-instagram"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-google"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-black"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-anchor"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-grey"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-pearl"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-white"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-exp"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-exp2"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-exp3"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-exp4"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-exp5"
      disabled={false}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
]
`;

exports[`Storyshots b/Button Disabled 1`] = `
<button
  className="base button"
  disabled={true}
  type="button"
>
  Indisponible
</button>
`;

exports[`Storyshots b/Button Important 1`] = `
Array [
  <span
    className="s0"
  >
    <button
      className="base button x-success"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-warning"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-error"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-red"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-pink"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-orange"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-yellow"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-green"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-indigo"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-indigo2"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-blue"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-violet"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-clear"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-background"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-heading"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-paragraph"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-subtitle"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-metadata"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-link"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-navlink"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-twitter"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-facebook"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-instagram"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-google"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-black"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-anchor"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-grey"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-pearl"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-white"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-exp"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-exp2"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-exp3"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-exp4"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
  <span
    className="s0"
  >
    <button
      className="base button x-exp5"
      disabled={false}
      important={true}
      type="button"
    >
      Reserva Ahora
    </button>
  </span>,
]
`;

exports[`Storyshots b/Button Sizes 1`] = `
Array [
  <div
    className="s0 x-exp3"
  >
    <button
      className="base button font-heading"
      disabled={false}
      type="button"
    >
      Ver espacios
    </button>
  </div>,
  <div
    className="s1 x-exp3"
  >
    <button
      className="base button font-heading"
      disabled={false}
      type="button"
    >
      Ver espacios
    </button>
  </div>,
  <div
    className="s2 x-exp3"
  >
    <button
      className="base button font-heading"
      disabled={false}
      type="button"
    >
      Ver espacios
    </button>
  </div>,
  <div
    className="s3 x-exp3"
  >
    <button
      className="base button font-heading"
      disabled={false}
      type="button"
    >
      Ver espacios
    </button>
  </div>,
  <div
    className="s4 x-exp3"
  >
    <button
      className="base button font-heading"
      disabled={false}
      type="button"
    >
      Ver espacios
    </button>
  </div>,
  <div
    className="s5 x-exp3"
  >
    <button
      className="base button font-heading"
      disabled={false}
      type="button"
    >
      Ver espacios
    </button>
  </div>,
]
`;

exports[`Storyshots b/Card Base 1`] = `
<div
  className="base card"
>
  Sample Card
</div>
`;

exports[`Storyshots b/Card Ghost Group 1`] = `
<div
  className="base card-group modifierGhost"
>
  <div
    className="base card"
  >
    Card1
  </div>
  <div
    className="base card"
  >
    Card2
  </div>
  <div
    className="base card"
  >
    Card3
  </div>
</div>
`;

exports[`Storyshots b/Card Group 1`] = `
<div
  className="base card-group"
>
  <div
    className="base card"
  >
    Card1
  </div>
  <div
    className="base card"
  >
    Card2
  </div>
  <div
    className="base card"
  >
    Card3
  </div>
</div>
`;

exports[`Storyshots b/Page Base 1`] = `
<main
  className="base page"
  id="default"
>
  Inspect source for details.
</main>
`;

exports[`Storyshots b/Page Item Type 1`] = `
<main
  className="base page"
  id="itemtype"
  itemScope=" "
  itemType="https://schema.org/Movie"
>
  <meta
    content="https://mysite.com/movie"
    itemProp="mainEntityOfPage"
  />
  Inspect source for details. Please note that when itemType is provided,
   
  <code>
    helmetProps.canonical
  </code>
   
  needs to be provided as well.
</main>
`;

exports[`Storyshots b/Page With Sections 1`] = `
<main
  className="base page"
  id="with-sections"
>
  <section
    className="base section"
    id="with-sections_s1"
  >
    Section 1
  </section>
  <section
    className="base section"
    id="with-sections_s2"
  >
    Section 2. Inspect source for details.
  </section>
</main>
`;

exports[`Storyshots b/QuestionDropdown Base 1`] = `
<div
  className="base question-dropdown"
>
  <button
    className="accordion"
    isGhost={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="caret"
    >
      ^
    </span>
    <div
      className="question-content"
    >
      What is Pareto?
    </div>
  </button>
  <div
    className="answer-content"
  >
    <div
      className="answer-text"
    >
      <p>
        Pareto is a female-owned and operated virtual workforce helping startups and small businesses automate day-to-day data processing, sales outreach, product research, and admin operations. We combine the quality and care of real people with the efficiency of machine automation to get the job done.
      </p>
      <p>
        At the same time, we’re a WBENC-certified business, empowering women in developing countries with meaningful economic opportunities.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots b/QuestionDropdown With SEO 1`] = `
<div
  className="base question-dropdown"
  itemProp="mainEntity"
  itemScope={true}
  itemType="http://schema.org/Question"
>
  <button
    className="accordion"
    isGhost={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="caret"
    >
      ^
    </span>
    <div
      className="question-content"
      itemProp="name"
    >
      What is Pareto?
    </div>
  </button>
  <div
    className="answer-content"
    itemProp="acceptedAnswer"
    itemType="https://schema.org/Answer"
  >
    <div
      className="answer-text"
      itemProp="text"
    >
      <p>
        Pareto is a female-owned and operated virtual workforce helping startups and small businesses automate day-to-day data processing, sales outreach, product research, and admin operations. We combine the quality and care of real people with the efficiency of machine automation to get the job done.
      </p>
      <p>
        At the same time, we’re a WBENC-certified business, empowering women in developing countries with meaningful economic opportunities.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots b/ThemeSelector Base 1`] = `
<div
  className="ui-undefined y-background b-y"
>
  <p>
    Theme :
  </p>
  <button
    className="base theme-selector"
    onClick={[Function]}
    type="button"
  >
    <span
      className="v0 m-v icon"
    />
  </button>
</div>
`;

exports[`Storyshots b/Title Base 1`] = `
<div
  className="base title"
>
  <h1
    className="heading"
  >
    Test
  </h1>
</div>
`;

exports[`Storyshots b/Title Sizes 1`] = `
Array [
  <div
    className="u2 pv-u"
  >
    <div
      className="y-background b-dark-y"
    >
      <div
        className="base title"
      >
        <h1
          className="heading"
        >
          This is a title in h1
        </h1>
        <p
          className="subtitle"
        >
          Here goes the subtitle
        </p>
      </div>
    </div>
  </div>,
  <div
    className="u2 pv-u"
  >
    <div
      className="y-background b-dark-y"
    >
      <div
        className="base title"
      >
        <h2
          className="heading"
        >
          This is a title in h2
        </h2>
        <p
          className="subtitle"
        >
          Here goes the subtitle
        </p>
      </div>
    </div>
  </div>,
  <div
    className="u2 pv-u"
  >
    <div
      className="y-background b-dark-y"
    >
      <div
        className="base title"
      >
        <h3
          className="heading"
        >
          This is a title in h3
        </h3>
        <p
          className="subtitle"
        >
          Here goes the subtitle
        </p>
      </div>
    </div>
  </div>,
  <div
    className="u2 pv-u"
  >
    <div
      className="y-background b-dark-y"
    >
      <div
        className="base title"
      >
        <h4
          className="heading"
        >
          This is a title in h4
        </h4>
        <p
          className="subtitle"
        >
          Here goes the subtitle
        </p>
      </div>
    </div>
  </div>,
  <div
    className="u2 pv-u"
  >
    <div
      className="y-background b-dark-y"
    >
      <div
        className="base title"
      >
        <h5
          className="heading"
        >
          This is a title in h5
        </h5>
        <p
          className="subtitle"
        >
          Here goes the subtitle
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots b/Title With Subtitle 1`] = `
<div
  className="base title"
>
  <h1
    className="heading"
  >
    Test
  </h1>
  <p
    className="subtitle"
  >
    This will appear as the subtitle
  </p>
</div>
`;

exports[`Storyshots c/ContentSlides Base 1`] = `
<div
  className="ui-light"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="base content-slides y-exp3 u1 md-u2"
  >
    <nav
      className="sidebar"
    >
      <header>
        <div
          className="base title"
        >
          <h1
            className="heading"
          >
            Red Libre
          </h1>
        </div>
      </header>
      <div
        className="elementContent"
      >
        <ul
          className="base icon-list"
          style={
            Object {
              "--list-icon": undefined,
              "--list-icon-hover": undefined,
            }
          }
        >
          <li
            className="elementItem x-heading c-x"
            onClick={false}
            style={
              Object {
                "--list-icon": "\\"l\\"",
                "--list-icon-hover": undefined,
              }
            }
          >
            Welcome
          </li>
          <li
            className="elementItem x-subtitle c-x"
            onClick={false}
            style={
              Object {
                "--list-icon": undefined,
                "--list-icon-hover": undefined,
              }
            }
          >
            Choose your plan
          </li>
          <li
            className="elementItem x-subtitle c-x"
            onClick={false}
            style={
              Object {
                "--list-icon": undefined,
                "--list-icon-hover": undefined,
              }
            }
          >
            Personal details
          </li>
          <li
            className="elementItem x-subtitle c-x"
            onClick={false}
            style={
              Object {
                "--list-icon": undefined,
                "--list-icon-hover": undefined,
              }
            }
          >
            Payment
          </li>
        </ul>
      </div>
      <footer>
        <button
          className="base theme-selector x-heading"
          onClick={[Function]}
          type="button"
        >
          <span
            className="v0 m-v icon"
          >
            m
          </span>
        </button>
      </footer>
    </nav>
    <div
      className="horizontal-menu"
    >
      <div
        className="base progress-bar modifierAttached"
        data-length="50%"
        style={
          Object {
            "--height": ".5em",
            "--progress": 40,
          }
        }
      />
      <div
        className="elementContent"
      >
        <div
          className="left"
        />
        <div
          className="title"
        >
          Welcome
        </div>
      </div>
    </div>
    <main>
      <div
        className="modifierActive slide"
      >
        <img
          alt=""
          data-is-current-theme={true}
          data-themable={true}
          src="https://i.imgur.com/mV3u4xV.png"
        />
        <img
          alt=""
          data-themable={true}
          src="https://i.imgur.com/PKDyy9c.png"
        />
        <div
          className="wrapper"
        >
          <div
            className="content"
          >
            <div
              className="base title"
            >
              <h1
                className="heading"
              >
                Welcome
              </h1>
              <p
                className="subtitle"
              >
                Welcome to this site. We hope you will have an amazing experience here.
              </p>
            </div>
            <div
              className="navigator"
            >
              <span />
              <button
                className="base button x-success next"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Next
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="slide"
      >
        <img
          alt=""
          data-is-current-theme={true}
          data-themable={true}
          src="https://i.imgur.com/WhQ2JPN.png"
        />
        <img
          alt=""
          data-themable={true}
          src="https://i.imgur.com/1Hu9c2r.png"
        />
        <div
          className="wrapper"
        >
          <div
            className="content"
          >
            <div
              className="base title"
            >
              <h1
                className="heading"
              >
                Parte 2
              </h1>
              <p
                className="subtitle"
              >
                Welcome to this site. We hope you will have an amazing experience here.
              </p>
            </div>
            <p>
              In ut sollicitudin elit. Maecenas tempor ex aliquet enim egestas, non sollicitudin mi tempor. Pellentesque fermentum, massa in cursus faucibus, enim tortor fringilla ligula, sit amet tincidunt neque orci et tellus. Nam dignissim tristique justo. Cras nulla sem, dictum pellentesque libero eget, porta placerat leo. Donec scelerisque enim risus, in pharetra purus fringilla eu. Cras placerat ac enim viverra rhoncus. Cras sagittis euismod orci eget aliquam. Nulla et mi non enim aliquam consequat. Cras volutpat porta convallis. Mauris ullamcorper vitae sapien ac rhoncus. Nullam vel porttitor mi, ut vestibulum arcu.
               
            </p>
            <div
              className="navigator"
            >
              <span />
              <button
                className="base button x-success next"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Next
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="slide"
      >
        <img
          alt=""
          data-is-current-theme={true}
          data-themable={true}
          src="https://i.imgur.com/WS8jeeu.png"
        />
        <img
          alt=""
          data-themable={true}
          src="https://i.imgur.com/Um1pkQi.png"
        />
        <div
          className="wrapper"
        >
          <div
            className="content"
          >
            <div
              className="base title"
            >
              <h1
                className="heading"
              >
                Parte 3
              </h1>
              <p
                className="subtitle"
              >
                Welcome to this site. We hope you will have an amazing experience here.
              </p>
            </div>
            <div
              className="navigator"
            >
              <span />
              <button
                className="base button x-success next"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Next
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="slide"
      >
        <img
          alt=""
          data-is-current-theme={true}
          data-themable={true}
          src="https://i.imgur.com/PmKKmuf.png"
        />
        <img
          alt=""
          data-themable={true}
          src="https://i.imgur.com/IpykAia.png"
        />
        <div
          className="wrapper"
        >
          <div
            className="content"
          >
            <div
              className="base title"
            >
              <h1
                className="heading"
              >
                Parte 4
              </h1>
              <p
                className="subtitle"
              >
                Welcome to this site. We hope you will have an amazing experience here.
              </p>
            </div>
            <div
              className="navigator"
            >
              <span />
              <button
                className="base button x-success next"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Next
              </button>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
